# nlp-non-deep

./: .gitignore  README.md  pyproject.toml
lab_02/: nlp02.ipynb
lab_03/: README.md  lab03.docx  nlp03.ipynb
lab_04/: bilstm.py  nlp04.ipynb
nlp1/lab_04/: lstm.py  nlp04.ipynb
nlp2/: README.md  nlp06.ipynb  nlp07.ipynb
nlp2/lab05/: nlp05.ipynb
nlp2/lab08/: annotation_sheets_and_interannotator_agreement.xlsx  nlp08.ipynb  nlp08_report.docx
