[tool.poetry]
name = "nlp1"
version = "0.1.0"
description = ""
authors = ["Luu Hoang Long VO <<luu-hoang-long.vo@epita.fr>>"]

[tool.poetry.dependencies]
python = "~3.8"
scikit-learn = "^1.1.2"
torch = "^1.12.1"
nltk = "^3.7"
datasets = "^2.5.2"
jupyterlab = "^3.4.8"
fasttext = "^0.9.2"
pandas = "^1.5.0"
matplotlib = "^3.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
